# extra-hands

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  package-lock.json  package.json
.claude/hooks/: check-tauri.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
frontend/: app.js  icon-preview.html  index.html  search.js  state.js  style.css  utils.js
scripts/: agent-loop.js  screenshot.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
tests/: parseStream.test.js  utils.test.js
